// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: inherit, color: inherit and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 100% !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  height: inherit;
}"
`;

exports[`getComponentCss() should return correct css for size: inherit, color: inherit and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 100% !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  height: inherit;
}"
`;

exports[`getComponentCss() should return correct css for size: inherit, color: primary and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 100% !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(100%) sepia(91%) saturate(38%) hue-rotate(254deg) brightness(110%) contrast(110%);
  height: inherit;
}"
`;

exports[`getComponentCss() should return correct css for size: inherit, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 100% !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  height: inherit;
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: contrast-high and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(68%) sepia(6%) saturate(108%) hue-rotate(187deg) brightness(104%) contrast(88%);
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: contrast-high and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(40%) sepia(2%) saturate(686%) hue-rotate(187deg) brightness(80%) contrast(94%);
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: contrast-low and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(20%) sepia(7%) saturate(421%) hue-rotate(202deg) brightness(97%) contrast(82%);
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: contrast-low and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(93%) sepia(11%) saturate(36%) hue-rotate(201deg) brightness(89%) contrast(102%);
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: contrast-medium and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(66%) sepia(3%) saturate(333%) hue-rotate(187deg) brightness(82%) contrast(86%);
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: contrast-medium and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(45%) sepia(6%) saturate(235%) hue-rotate(177deg) brightness(91%) contrast(85%);
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: inherit and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: inherit and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: primary and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(100%) sepia(91%) saturate(38%) hue-rotate(254deg) brightness(110%) contrast(110%);
}"
`;

exports[`getComponentCss() should return correct css for size: small, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 36px !important;
  width: inherit !important;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  pointer-events: none;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
}"
`;
